--- a/templates/design/contact.html
+++ b/templates/design/contact.html
@@ -5,76 +5,79 @@
 
 {% block body %}
 
-<div class="breadcrumb">
-	<div class="container">
-		<div class="breadcrumb-inner">
-			<ul class="list-inline list-unstyled">
-				<li><a href="/">Home</a></li>
-				<li class='active'>contact-us</li>
-			</ul>
-		</div><!-- /.breadcrumb-inner -->
-	</div><!-- /.container -->
-</div><!-- /.breadcrumb -->
+    <div class="breadcrumb">
+        <div class="container">
+            <div class="breadcrumb-inner">
+                <ul class="list-inline list-unstyled">
+                    <li><a href="/">Home</a></li>
+                    <li class='active'>contact-us</li>
+                </ul>
+            </div><!-- /.breadcrumb-inner -->
+        </div><!-- /.container -->
+    </div><!-- /.breadcrumb -->
 
-<div class="body-content">
-	<div class="container">
-    <div class="contact-page">
-		<div class="row">
-				<div class="col-md-12 contact-map outer-bottom-vs">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3886.0080692193424!2d80.29172299999996!3d13.098675000000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a526f446a1c3187%3A0x298011b0b0d14d47!2sTransvelo!5e0!3m2!1sen!2sin!4v1412844527190" width="600" height="450"  style="border:0"></iframe>
-				</div>
-				<div class="col-md-9 contact-form">
-	<div class="col-md-12 contact-title">
-		<h4>Contact Form</h4>
-	</div>
-	<form method="POST" class="register-form" role="form">
-		{% csrf_token %}
-	<div class="col-md-4 ">
-			<div class="form-group">
-		    <label class="info-title" for="exampleInputName">Your Name <span>*</span></label>
-		    {{ contactForm.name }}
-		  </div>
-	</div>
-	<div class="col-md-4">
-		<div class="form-group">
-	    <label class="info-title" for="exampleInputEmail1">Email Address <span>*</span></label>
-	    {{ contactForm.email_form }}
-	  </div>
-	</div>
-	<div class="col-md-4">
-		<div class="form-group">
-	    <label class="info-title" for="exampleInputTitle">Subject <span>*</span></label>
-	    {{ contactForm.subject }}
-	  </div>
-	</div>
-	<div class="col-md-12">
-		<div class="form-group">
-	    <label class="info-title" for="exampleInputComments">Your Message <span>*</span></label>
-	    {{ contactForm.message }}
-	  </div>
-	</div>
-	<div class="col-md-12 outer-bottom-small m-t-20">
-		<button type="submit" class="btn-upper btn btn-primary checkout-page-button">Send Message</button>
-	</div>
-</div>
-</form>
-<div class="col-md-3 contact-info">
-	<div class="contact-title">
-		<h4>Address</h4>
-	</div>
-	<div class="clearfix address">
-		<span class="contact-i"><i class="fa fa-map-marker"></i></span>
-		<span class="contact-span">Themesstock, 789 Main rd, Anytown, CA 12345 USA</span>
-	</div>
-	<div class="clearfix phone-no">
-		<span class="contact-i"><i class="fa fa-mobile"></i></span>
-		<span class="contact-span">+(88) 01713457030</span>
-	</div>
-	<div class="clearfix email">
-		<span class="contact-i"><i class="fa fa-envelope"></i></span>
-		<span class="contact-span">sales.metaphorbd@gmail.com</span>
-	</div>
-</div>			</div><!-- /.contact-page -->
-		</div><!-- /.row -->
-</div><!-- /.container -->
+    <div class="body-content">
+    <div class="container">
+        <div class="contact-page">
+            <div class="row">
+                <div class="col-md-12 contact-map outer-bottom-vs">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3886.0080692193424!2d80.29172299999996!3d13.098675000000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a526f446a1c3187%3A0x298011b0b0d14d47!2sTransvelo!5e0!3m2!1sen!2sin!4v1412844527190"
+                            width="600" height="450" style="border:0"></iframe>
+                </div>
+                <div class="col-md-9 contact-form">
+                    <div class="col-md-12 contact-title">
+                        <h4>Contact Form</h4>
+                    </div>
+                    <form method="POST" class="register-form" role="form">
+                        {% csrf_token %}
+                        <div class="col-md-4 ">
+                            <div class="form-group">
+                                <label class="info-title" for="exampleInputName">Your Name <span>*</span></label>
+                                {{ contactForm.name }}
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="info-title" for="exampleInputEmail1">Email Address <span>*</span></label>
+                                {{ contactForm.email_form }}
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="info-title" for="exampleInputTitle">Subject <span>*</span></label>
+                                {{ contactForm.subject }}
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label class="info-title" for="exampleInputComments">Your Message <span>*</span></label>
+                                {{ contactForm.message }}
+                            </div>
+                        </div>
+                        <div class="col-md-12 outer-bottom-small m-t-20">
+                            <button type="submit" class="btn-upper btn btn-primary checkout-page-button">Send Message
+                            </button>
+                        </div>
+                </div>
+                </form>
+                <div class="col-md-3 contact-info">
+                    <div class="contact-title">
+                        <h4>Address</h4>
+                    </div>
+                    <div class="clearfix address">
+                        <span class="contact-i"><i class="fa fa-map-marker"></i></span>
+                        <span class="contact-span">Themesstock, 789 Main rd, Anytown, CA 12345 USA</span>
+                    </div>
+                    <div class="clearfix phone-no">
+                        <span class="contact-i"><i class="fa fa-mobile"></i></span>
+                        <span class="contact-span">+(88) 01748880505</span>
+                    </div>
+                    <div class="clearfix email">
+                        <span class="contact-i"><i class="fa fa-envelope"></i></span>
+                        <span class="contact-span">mbrsagor@gmail.com</span>
+                    </div>
+                </div>
+            </div><!-- /.contact-page -->
+        </div><!-- /.row -->
+    </div><!-- /.container -->
 {% endblock %}
